# PyAppDevKit

./: README.md  pyproject.toml  test.py
LibFunc/: file.py  lib.py  pyappdevkit.py  pyappdevkit_info.py  switch.py
PyAppDevKit/: parameters.py  pyappdevkit.py  pyappdevkit_info.py
pyappdevkit/: __init__.py  parameters.py  pyappdevkit_info.py
