[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyappdevkit"  # PyPI üzerindeki benzersiz paket ismi
version = "2.2"
description = "PyAppDevKit is a development kit for Python developers that aims to make software/application development easier."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "LinuxUsersLinuxMint"}
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/LinuxUsersLinuxMint/PyAppDevKit"
Source = "https://github.com/LinuxUsersLinuxMint/PyAppDevKit"